✨ Brand model from vin
