# src/v1/app/api/application/api-routes.ts
@@ -1,4 +1,5 @@
 import { router } from '@/helpers/middle.helper'
-import { getVehicleFromVin } from '@/v1/app/api/application/api-controller'
+import { getBrandModelFromVin, getVehicleFromVin } from '@/v1/app/api/application/api-controller'
 
 export const routesVehicle = router.get('/vehicle', getVehicleFromVin)
+export const routesBrandModel = router.get('/brand-model', getBrandModelFromVin)
